<fix> Changed all pages to begin invisible so that they do not take time to disappear when html is opened.

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body{
     display: none;
 } */
 
+.page{
+    display: none;
+}
+
 .title-text{
     display: block;
     margin: auto;
